# birdtorch

./: CMakeLists.txt
include/birdtorch/: tensor.h
src/: tensor.cpp
tests/cpp/: test_tensor.cpp
